# Caddy

./: CMakeLists.txt  README.md  Toolchain-gnueabi-BBB.cmake  bluetooth_test.cpp  gyro_test.cpp  mag_test.cpp  setup.sh  spi_test.cpp  spst_test.cpp
lib/: CMakeLists.txt  bit.h  bluetooth.cpp  bluetooth.h  l3gd20.cpp  l3gd20.h  lis3mdl.cpp  lis3mdl.h  spi.cpp  spi.h
